fix: overflow on homepage

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -35,3 +35,7 @@ body,
 html {
 	@apply overflow-x-hidden p-0 m-0 w-screen h-screen;
 }
+
+#__next {
+	@apply h-full;
+}
